# Nyth

./:  Logo Nyth Morphing.md   LogoNythMorphing.tsx  .clang-format  .clang-tidy  .detoxrc.js  .env  .env.example  .eslintrc.js  .gitignore  .gitlab-ci.yml  .lintstagedrc.json  ANALYSE_APIS_JSI.md  ANALYSE_APPROFONDIE_COMPLETE.md  ANALYSE_COUVERTURE_FONCTIONNALITES.md  ANALYSE_SCIENTIFIQUE_AUDIO.md  ANALYSE_SCIENTIFIQUE_EFFECTS.md  ANALYSE_SCIENTIFIQUE_EXTREME.md  ANALYSE_SCIENTIFIQUE_NOISE_REDUCTION.md  ANALYSE_SCIENTIFIQUE_SAFETY.md  AUDIO_OPTIMIZATIONS.md  App.tsx  CMakeLists.txt  CORRECTIONS_APPLIQUEES.md  CORRECTION_CACHE_TIMESTAMP.md  CppProperties.json  EQUALIZER_AUDIO_PROCESSING_FLOW.md  EQUALIZER_REACT_COMPONENT_FLOW.md  FIX_MODULES_NATIFS.md  Jenkinsfile  MIGRATION-FIREBASE.md  Makefile  OPTIMIZATIONS_REPORT.md  PROBLEMES_DETECTES.md  RAPPORT_CONFORMITE_CPP17.md  RAPPORT_XCODE_MACOS.md  README-COMMANDES.md  README.md  SAFETY_OPTIMIZATIONS_REPORT.md  STRIPE_SETUP.md  UI_IMPROVEMENTS.md  (+68 more)
__tests__/SIMD/: CMakeLists.txt  README.md  SIMDComprehensiveTest.cpp  quick_simd_test.js  run_simd_tests.bat  run_simd_tests.sh
__tests__/audio/: AudioTestSuite.cpp  CMakeLists.txt  CMakeListsSimple.cmake  EXAMPLES.md  README.md  manual_test_guide.md  performance_benchmarks.hpp  run_audio_integration.bat  run_core_integration.bat  run_fft_validation.bat  run_simple_test.bat  run_tests.sh  simple_test.cpp  stress_tests.hpp  test_audio_integration.cpp  test_biquad_diagnostic.cpp  test_config.hpp  test_core_effects_integration.cpp  test_core_integration.cpp  test_core_sophisticated.cpp  test_core_unit_tests.cpp  test_effects_components.cpp  test_effects_integration_check.cpp  test_effects_sophisticated.cpp  test_fft_files.cpp  test_helpers.hpp  test_jsi_components.cpp  test_jsi_translation.cpp  test_runner.hpp  test_simple_integration.cpp  validate_audio_concepts.ps1
__tests__/audio/build_simple/: CMakeCache.txt
__tests__/test/: CMakeLists.txt  test_audio_buffer.cpp  test_audio_equalizer.cpp  test_audio_safety.cpp  test_biquad_filter.cpp  test_effects.cpp  test_main.cpp  test_math_utilities.cpp  test_performance.cpp
shared/Audio/capture/: AudioCapture.cpp  AudioCapture.hpp  AudioCaptureException.cpp  AudioCaptureException.hpp  AudioCaptureImpl.cpp  AudioCaptureImpl.hpp  AudioCaptureImpl.mm  AudioCaptureJNI.hpp  AudioCaptureMetrics.cpp  AudioCaptureMetrics.hpp  AudioCaptureSIMD.cpp  AudioCaptureSIMD.hpp  AudioCaptureUtils.cpp  AudioCaptureUtils.hpp  AudioCaptureUtilsImpl.hpp  AudioFileWriter.cpp  AudioFileWriter.hpp  AudioFileWriterImpl.hpp  CMakeLists.txt  NativeAudioCaptureModule.cpp  NativeAudioCaptureModule.h  RAPPORT_TYPAGE.md  README.md
shared/Audio/capture/Docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  EXAMPLES.md  README.md  TODO.md
shared/Audio/capture/components/: AudioCapture.hpp  AudioCaptureException.hpp  AudioCaptureFactory.cpp  AudioCaptureImpl.hpp  AudioCaptureImpl.mm  AudioCaptureMetrics.cpp  AudioCaptureMetrics.hpp  AudioCaptureSIMD.cpp  AudioCaptureSIMD.hpp  AudioFileWriter.cpp  AudioFileWriter.hpp  AudioProcessing.cpp
shared/Audio/capture/config/: AudioConfig.h  AudioFormatConfig.h  AudioLimits.h  PlatformSupport.h
shared/Audio/capture/docs/: iOS_Audio_Formats_Guide.md  iOS_Audio_Formats_Guide_Updated.md
shared/Audio/capture/examples/: CMakeLists.txt  audio_recorder_example.cpp  ios_formats_example.mm
shared/Audio/capture/jsi/: JSICallbackManager.cpp  JSICallbackManager.h  JSIConverter.cpp  JSIConverter.h  JSIValidator.h
shared/Audio/capture/managers/: AudioCaptureManager.cpp  AudioCaptureManager.h
shared/Audio/core/: AudioCoreHelpers.cpp  AudioCoreHelpers.hpp  AudioEqualizer.cpp  AudioEqualizer.h  AudioEqualizer.hpp  AudioEqualizerTemplates.hpp  AudioError.hpp  AudioModuleRegistry.cpp  AudioModuleRegistry.h  BiquadFilter.cpp  BiquadFilter.h  BiquadFilter.hpp  BiquadFilterOptimized.hpp  BiquadFilterSIMD.hpp  BiquadFilterSafe.hpp  BranchFreeAlgorithms.hpp  CMakeLists.txt  CoreConstants.hpp  DbLookupTable.hpp  EQBand.hpp  EQPreset.hpp  EQPresetFactory.cpp  EQPresetFactory.hpp  ErrorHandler.cpp  ErrorHandler.hpp  JSIConverters.cpp  JSIConverters.hpp  MemoryPool.hpp  NativeAudioCoreModule.cpp  NativeAudioCoreModule.h  ThreadSafeBiquadFilter.hpp  core_module_report.md  jsi_turbomodule_audit_report.md
shared/Audio/core/components/: README.md
shared/Audio/core/core_managers/: AudioAnalysisManager.cpp  AudioAnalysisManager.h  AudioRecorderManager.h  EqualizerManager.h  FilterManager.cpp  FilterManager.h  README.md
shared/Audio/core/jsi/: JSIConverter.cpp  JSIConverter.h
shared/Audio/core/managers/: AudioAnalysisManager.cpp  AudioAnalysisManager.h  AudioRecorderManager.cpp  AudioRecorderManager.h  EqualizerManager.cpp  EqualizerManager.h  FilterManager.cpp  (+2 more)
shared/Audio/effects/: CMakeLists.txt  Compressor.h  Compressor.hpp  Delay.h  Delay.hpp  EffectBase.h  EffectBase.hpp  EffectChain.h  EffectChain.hpp  EffectConstants.hpp  NativeAudioEffectsModule.cpp  NativeAudioEffectsModule.h  README.md
shared/Audio/noise/: ADVANCED_ALGORITHMS_DOC.md  AdvancedSpectralNR.hpp  CMakeLists.txt  IMCRA.cpp  IMCRA.hpp  MultibandProcessor.hpp  NativeAudioNoiseModule.cpp  NativeAudioNoiseModule.h  NoiseConstants.hpp  NoiseContants.hpp  NoiseReducer.cpp  NoiseReducer.h  NoiseReducer.hpp  README.md  RNNoiseSuppressor.cpp  RNNoiseSuppressor.h  RNNoiseSuppressor.hpp  SpectralNR.cpp  SpectralNR.h  SpectralNR.hpp  TYPING_FIXES_SUMMARY.md  WienerFilter.cpp  WienerFilter.hpp
shared/Audio/safety/: AudioSafety.cpp  AudioSafety.h  AudioSafety.hpp  AudioSafetyOptimized.hpp  CMakeLists.txt  NativeAudioSafetyModule.cpp  NativeAudioSafetyModule.h  README.md  SafetyConstants.hpp  SafetyContants.hpp  TestAudioSafety.cpp
shared/Audio/tests/: BenchmarkOptimizations.cpp  CMakeLists.txt  README.md  TestAudioCore.cpp  TestAudioCoreSimple.cpp  TestCorrections.cpp  TestSpecializedComponents.cpp  run_tests.sh
shared/Videos/Platform/: CMakeLists.txt  Config.cmake.in  README.md  example_usage.hpp
tests/: AudioCaptureBenchmarks.cpp  AudioCaptureTests.cpp  CMakeLists.txt
(+2674 files in other folders)
